--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -111,7 +111,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-            <h5>TEST FEATURE VIABLITY</h5>
+            <h5>TEST FEATURE VIABILITY</h5>
         </div>
     </div>
             <div class="row">
