--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -91,9 +91,9 @@ header{
         display: flex;
         justify-content: space-between;
         img{
-            height: 70px;
-            width: 70%;
-            padding-left: 40px;
+            //height: 70px;
+            //width: 70%;
+            padding-left: 60px;
         }
         a{
             display: block;
