--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -46,12 +46,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-2"></div>
-      <div class="col-md-9">
+      <div class="col-md-8">
       <div class="s-img">
-        <img src="/assets/images/sample/sample.png" />
+        <img src="/assets/images/sample/sample.webp" />
       </div>
     </div>
-      <div class="col-md-1"></div>
+      <div class="col-md-2"></div>
     </div>
     <div class="row tab">
           <div class="col-md-1"></div>
