home page changes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -94,7 +94,7 @@
       <div class="service-body">
         <div class="row">
           <div class="col-md-4">
-              <div class="service" routerLink="/services/user-experience">
+              <div class="service">
                 <!-- <div class="service-icon">
                     <img src="/assets/images/services/one.png" alt="UX Consulting"/>
                 </div> -->
@@ -104,7 +104,7 @@
               </div>
           </div>
           <div class="col-md-4">
-            <div class="service" routerLink="/services/interface-design">
+            <div class="service">
                 <!-- <div class="service-icon">
                   <img src="/assets/images/services/two.png" alt="UI Design"/>
                 </div> -->
@@ -114,7 +114,7 @@
             </div>
         </div>
         <div class="col-md-4">
-          <div class="service" routerLink="/services/ui-dev">
+          <div class="service">
             <!-- <div class="service-icon">
               <img src="/assets/images/services/three.png" alt="UI Development" />
             </div> -->
@@ -127,7 +127,7 @@
         </div>
         <div class="row">
            <div class="col-md-4">
-                <div class="service" routerLink="/services/end-to-end">
+                <div class="service">
                   <!-- <div class="service-icon">
                     <img src="/assets/images/services/four.png" alt="End-to-End Development"/>
                   </div> -->
@@ -137,7 +137,7 @@
                 </div>
           </div>
           <div class="col-md-4">
-            <div class="service"  routerLink="/services/usability-testing">
+            <div class="service">
               <!-- <div class="service-icon">
                 <img src="/assets/images/services/five.png" alt="Usablity Testing"/>
               </div> -->
@@ -147,7 +147,6 @@
             </div>
       </div>
           <div class="col-md-4 redirect">
-            <a href="https://uxmint.in/" target="_blank">
               <div class="service">
                 <!-- <div class="service-icon">
                   <img src="/assets/images/services/six.png" alt="Training"/>
@@ -155,14 +154,14 @@
                 <h4>INFORMATION PORTALS</h4>
                 <p>Transform your workforce with cheery picked courses making them business focused and future ready.</p>
                 <!-- <a class="bttn">Show More</a> -->
-              </div> </a>
+              </div>
           </div>
         </div>
       </div>
 
       <div class="row service-button">
         <div class="col-md-12">
-        <a class="bttn">READ MORE</a> 
+        <a class="bttn" href="https://uxmint.design/services/user-experience" target="_blank">READ MORE</a> 
       </div>
       </div>
   </div>
