--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -171,7 +171,7 @@
 
       <div class="row service-button">
         <div class="col-md-12">
-        <a class="bttn" href="https://uxmint.design/services/user-experience" target="_blank">READ MORE</a> 
+        <a class="bttn" href="https://uxmint.design/services/user-experience">READ MORE</a> 
       </div>
       </div>
   </div>
