--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -234,7 +234,7 @@ section.home-carousel{
     .step-image{
         text-align: center;
         img{
-            width: 30%;
+            width: 12%;
             height: 20px;
         }
     }
@@ -285,7 +285,7 @@ section.home-carousel{
     .step-image{
         text-align: center;
         img{
-            width: 20%;
+            width: 10%;
             height: 30px;
         }
     }
@@ -414,6 +414,13 @@ section.home-carousel{
         h3{
             font-size: 20px;
         }
+        .step-image{
+            text-align: center;
+            img{
+                width: 30%;
+                height: 20px;
+            }
+        }
     }
     .our-client-body{
         text-align: center;
@@ -454,6 +461,13 @@ section.home-carousel{
         h1{
             font-size: 20px;
         }
+        .step-image{
+        text-align: center;
+        img{
+            width: 20%;
+            height: 30px;
+        }
+    }
     }
 }
 @include media-breakpoint-down(md) {
