--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -91,9 +91,9 @@ header{
         display: flex;
         justify-content: space-between;
         img{
-            //height: 70px;
-            //width: 70%;
-            padding-left: 60px;
+            height: 70px;
+            width: 80%;
+            padding-left: 50px;
         }
         a{
             display: block;
