--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -44,11 +44,18 @@
 <!-- Sample design -->
 <section class="sample">
   <div class="container">
-    <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col-md-8">
-      <div class="s-img">
-        <img src="/assets/images/sample/sample.webp" />
+    <div class="row text">
+      <div class="col-md-3"></div>
+      <div class="col-md-1">
+        <span class="dot"></span>
+      </div>
+      <div class="col-md-6">
+      <div class="sample-text">
+        <h2>We Bring</h2>
+        <h1>DIGITAL</h1>
+        <h1>TRANSFORMATION</h1>
+        <p>THROUGH DESIGN</p>
+        <!-- <img src="/assets/images/sample/sample.png" /> -->
       </div>
     </div>
       <div class="col-md-2"></div>
