--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -6,13 +6,33 @@
 .sample{
     padding-top: 140px;
     padding-bottom: 50px;
-    .s-img{
-        text-align: center;
-        img{
-            width: 80%;
-            height: auto;
+    .text{
+    .dot {
+        margin-top: 90px;
+        height: 60px;
+        width: 60px;
+        background-color: #FDEE78;
+        border-radius: 50%;
+        display: inline-block;
+      }
+    .sample-text{
+        text-align: left;
+        padding-left: 20px;
+        color: #20a8a8;
+        h2{
+            font-size: 60px;
+            font-weight: 300;
+        }
+        h1{
+            font-size: 60px;
+            font-weight: 700;
+        }
+        p{
+            font-size: 20px;
+            font-weight: 400;
         }
     }
+}
     .tab{
         padding-top: 120px;
         text-align: center;
@@ -37,13 +57,36 @@
     .sample{
         padding-top: 150px;
         padding-bottom: 100px;
-        .s-img{
-            text-align: center;
-            img{
-                width: 80%;
-                height: auto;
+        .text{
+            .col-md-1{
+                width: 20%;
+                padding-left: 40px;
+                padding-right: 0px;
+            }
+            .col-md-6{
+                width: 50%;
+            }
+        .dot {
+            margin-top: 45px;
+            height: 40px;
+            width: 40px;
+            background-color: #FDEE78;
+            border-radius: 50%;
+            display: inline-block;
+          }
+        .sample-text{
+            padding-left: 10px;
+            h2{
+                font-size: 30px;
+            }
+            h1{
+                font-size: 30px;
+            }
+            p{
+                font-size: 17px;
             }
         }
+    }
         .tab{
             display: none;
             // padding-top: 80px;
@@ -409,7 +452,7 @@ section.home-carousel{
         width: 80%;
         margin-top: 80px;
         margin-bottom: 20px;
-        margin-left: 30px;
+        margin-left: 40px;
         margin-right: 30px;
         h3{
             font-size: 20px;
