--- a/src/app/components/our-team/our-team.component.html
+++ b/src/app/components/our-team/our-team.component.html
@@ -1,6 +1,6 @@
 <div class="team">
   <div class="step-image">
-    <img src="/assets/images/about-us/our1.webp" alt="uxmint">
+    <img src="/assets/images/about-us/our1.jpg" alt="uxmint">
 </div>
 <div class="container">
 <div class="row">
