--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -102,9 +102,9 @@
         <div class="row">
           <div class="col-md-4">
               <div class="service">
-                <!-- <div class="service-icon">
-                    <img src="/assets/images/services/one.png" alt="UX Consulting"/>
-                </div> -->
+                <div class="service-icon">
+                    <img src="/assets/images/services/one.svg" alt="User Experience"/>
+                </div>
                 <h4>DIGITAL TRANSFORMATION</h4>
                 <p>We help clients transform their legacy system by reimagining their process to embrace continuous 
                   improvement and innovation to elevate customer experience.
@@ -114,9 +114,9 @@
           </div>
           <div class="col-md-4">
             <div class="service">
-                <!-- <div class="service-icon">
-                  <img src="/assets/images/services/two.png" alt="UI Design"/>
-                </div> -->
+                <div class="service-icon">
+                  <img src="/assets/images/services/two.svg" alt="Interface Design"/>
+                </div>
                 <h4>PRODUCT DEVELOPMENT</h4>
                 <p>We help to bring a product live beginning from ideation to market launch. Our consultants can work 
                   as a true extension of internal business or development team to bring the product live.</p>
@@ -125,9 +125,9 @@
         </div>
         <div class="col-md-4">
           <div class="service">
-            <!-- <div class="service-icon">
-              <img src="/assets/images/services/three.png" alt="UI Development" />
-            </div> -->
+            <div class="service-icon">
+              <img src="/assets/images/services/three.svg" alt="UI Development" />
+            </div>
             <h4>START UPS</h4>
             <p>We've been there and we exactly know the struggles and what it takes to build a product from the scratch. 
               We have the expertise to validate your ideas with the right process and to bring the right solutions for 
@@ -139,9 +139,9 @@
         <div class="row">
            <div class="col-md-4">
                 <div class="service">
-                  <!-- <div class="service-icon">
-                    <img src="/assets/images/services/four.png" alt="End-to-End Development"/>
-                  </div> -->
+                  <div class="service-icon">
+                    <img src="/assets/images/services/four.svg" alt="End-to-End Development"/>
+                  </div>
                   <h4>MOBILE APPS</h4>
                   <p>With the need for constant updates and customer interaction the demand for mobile apps have increased multifold. 
                     Aligning with the Native Ecosystem is the key to design for Android & iOS which helps in easier adaptability. 
@@ -151,9 +151,9 @@
           </div>
           <div class="col-md-4">
             <div class="service">
-              <!-- <div class="service-icon">
-                <img src="/assets/images/services/five.png" alt="Usablity Testing"/>
-              </div> -->
+              <div class="service-icon">
+                <img src="/assets/images/services/five.svg" alt="Usablity Testing"/>
+              </div>
               <h4>ENTERPRISE APPLICATIONS</h4>
               <p>Its a huge decision when it comes to Enterprise Application Revamp. They can be complex and interwoven with multiple other systems. 
                 We exactly know how to align the customer demand and the customer experience and build a scalable, component based mission 
@@ -164,9 +164,9 @@
       </div>
           <div class="col-md-4 redirect">
               <div class="service">
-                <!-- <div class="service-icon">
-                  <img src="/assets/images/services/six.png" alt="Training"/>
-                </div> -->
+                <div class="service-icon">
+                  <img src="/assets/images/services/six.svg" alt="Training"/>
+                </div>
                 <h4>INFORMATION PORTALS</h4>
                 <p>Build the face of your business that speaks of the product or service offered and acts as the 
                   gateway for your business transactions. We focus on customer engagement and conversion.</p>
