--- a/src/styles.scss
+++ b/src/styles.scss
@@ -138,7 +138,7 @@ label{
         margin-bottom: 32px;
         //text-align: center;
         img{
-            height: auto;
+            height: 80px;
             width: auto;
             //padding-left: 80px;
             // &:last-child{
