image & font changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,27 +26,37 @@
                         <div class="container">
                           <div class="dropdown-menu-full">
                             <a routerLink="/services/user-experience" title="UX Consulting">
-                              <img src="/assets/images/services/one.png" />
+                              <div class="step-icon">
+                              <img src="/assets/images/home/icon-1.png" />
+                              </div>
                               <span>USER EXPERIENCE</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/interface-design" title="Interface Design">
-                              <img src="/assets/images/services/two.png" />
+                              <div class="step-icon">
+                              <img src="/assets/images/home/icon-2.png" />
+                              </div>
                               <span>INTERFACE DESIGN</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/ui-dev" title="UI Development">
-                              <img src="/assets/images/services/three.png" />
+                              <div class="step-icon">
+                              <img src="/assets/images/home/icon-3.png" />
+                              </div>
                               <span>UI DEVELOPMENT</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/end-to-end" title="End-to-End Development">
-                              <img src="/assets/images/services/four.png" />
+                              <div class="step-icon">
+                              <img src="/assets/images/home/icon-4.png" />
+                              </div>
                               <span>END TO END DEVELOPMENT</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/usability-testing" title="Usability Testing">
-                              <img src="/assets/images/services/five.png" />
+                              <div class="step-icon">
+                              <img src="/assets/images/home/icon-5.png" />
+                              </div>
                               <span>USABILITY TESTING</span>
                             </a>
                           </div>
