--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="row icons-list">
-                <ul class="list-icons">
+                <ul class="list-icons1">
                     <li>
                         <fa-icon [icon]="['fas','cog']"></fa-icon>
                     </li>
@@ -147,7 +147,7 @@
                         <fa-icon [icon]="['fas','user-alt']"></fa-icon>
                     </li>
                 </ul>
-                <ul class="list-icons">
+                <ul class="list-icons1">
                     <li>
                         <fa-icon [icon]="['fas','th-large']"></fa-icon>
                     </li>
@@ -173,7 +173,7 @@
                         <fa-icon [icon]="['fas','check-square']"></fa-icon>
                     </li>
                 </ul>
-                <ul class="list-icons">
+                <ul class="list-icons2">
                     <li>
                         <fa-icon [icon]="['fas','paperclip']"></fa-icon>
                     </li>
@@ -199,7 +199,7 @@
                         <fa-icon [icon]="['fab','linkedin']"></fa-icon>
                     </li>
                 </ul>
-                <ul class="list-icons">
+                <ul class="list-icons3">
                     <li>
                         <fa-icon [icon]="['fas','arrow-left']"></fa-icon>
                     </li>
