--- a/src/app/components/services/visual-design/visual-design.component.scss
+++ b/src/app/components/services/visual-design/visual-design.component.scss
@@ -22,7 +22,7 @@ h5{
     background-color: #F7F5FF; 
     margin-top: -15px;
     h5{
-        font-size: 60px;
+        font-size: 50px;
         font-weight: 300;
         text-align: left;
         margin-bottom: 30px;
@@ -150,13 +150,45 @@ h5{
         text-align: center;
         padding: 100px;
     }
-    .list-icons{
+    .list-icons1{
         padding-top: 20px;
         list-style: none;
         li{
             padding-right: 28px;
             display: inline-block;
             padding-left: 41px;
+        }
+        fa-icon{
+            min-width: 20px;
+            font-size: 44px;
+            vertical-align: middle;
+            color: #60D6C9;
+            display: inline-block;
+        }
+    }
+    .list-icons2{
+        padding-top: 20px;
+        list-style: none;
+        li{
+            padding-right: 31px;
+            display: inline-block;
+            padding-left: 41px;
+        }
+        fa-icon{
+            min-width: 20px;
+            font-size: 44px;
+            vertical-align: middle;
+            color: #60D6C9;
+            display: inline-block;
+        }
+    }
+    .list-icons3{
+        padding-top: 20px;
+        list-style: none;
+        li{
+            padding-right: 26px;
+            display: inline-block;
+            padding-left: 40px;
         }
         fa-icon{
             min-width: 20px;
@@ -293,7 +325,7 @@ h5{
     }
     .searvice-jumbotron{
         h5{
-            font-size: 35px;
+            font-size: 30px;
             margin-bottom: 20px;
             margin-top: 50px;
         }
