--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -37,7 +37,9 @@
   <div class="row">
     <div class="col-md-5">
       <div class="description">
-         <p>Provide Meaningful design solution for products which amplifies human ability resulting in harmony between users and technology. Design for solving problems, Design for emotions, Design for culture, Design for a better tomorrow.</p>
+         <p>Provide Meaningful design solution for products which amplifies human ability resulting in harmony between 
+           users and technology. Design for Solving Problems, Design for Emotions, Design for Culture, 
+           Design for a Better Tomorrow.</p>
         </div>
       </div>
       <div class="col-md-1"></div>
